# italian-draughts

./: CHANGELOG  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Chessboard.cpp  Chessboard.h  ChessboardSquare.cpp  ChessboardSquare.h  Frame.cpp  Frame.h  FrameEvents.cpp  GameLogic.cpp  GameLogic.h  LICENSE  MinimaxThread.cpp  MinimaxThread.h  MyFrame.cpp  MyFrame.h  ProjectVariables.h.in  README.md  Resources.cpp  Resources.h  TODO.md  config.h.in  main.cpp
.github/workflows/: cmake-single-platform.yml
colors/: default
doc/: CMakeLists.txt  italian-draughts.1.scd  italian-draughts.5.scd
frontend/wx/: CMakeLists.txt  README.md
frontend/wx/ChessboardGrid/: ChessboardGrid.cpp  ChessboardGrid.h
frontend/wx/ChessboardSquare/: ChessboardSquare.cpp  ChessboardSquare.h
frontend/wx/Frame/: Frame.cpp  Frame.h
frontend/wx/Resources/: README.md  Resources.h
images/default/: index
include/: logo.xpm  utils.h
include/checkers/: MatchManager.h
logo/: italian-draughts.xpm
man/: CMakeLists.txt  italian-draughts-it.1.scd  italian-draughts-it.5.scd  italian-draughts.1.scd  italian-draughts.5.scd
src/: CMakeLists.txt  ProjectVariables.h.in  README.md  main.cpp
src/ChessboardGrid/: CMakeLists.txt  ChessboardGrid.cpp  ChessboardGrid.h
src/ChessboardManager/: CMakeLists.txt  Chessboard.h  ChessboardManager.cpp  ChessboardManager.h
src/ChessboardSquare/: CMakeLists.txt  ChessboardSquare.cpp  ChessboardSquare.h
src/Frame/: CMakeLists.txt  Frame.cpp  Frame.h  FrameEvents.cpp  README.md
src/GameAlgorithm/: CMakeLists.txt  GameAlgorithm.cpp  GameAlgorithm.h  README.md
src/GameLogic/: CMakeLists.txt  GameLogic.cpp  GameLogic.h
src/GameManager/: CMakeLists.txt  GameManager.cpp  GameManager.h
src/GameUtils/: CMakeLists.txt  GameUtils.cpp  GameUtils.h
src/MatchManager/: CMakeLists.txt  MatchManager.cpp  MatchManager.h
src/Resources/: CMakeLists.txt  README.md  Resources.cpp  Resources.h
src/WorkingThread/: CMakeLists.txt  MinimaxThread.cpp  MinimaxThread.h
src/checkers/: CMakeLists.txt  GameUtils.cpp  MatchManager.cpp
strings/: default  it
themes/: default
